# bionemo-framework

./: .coderabbit.yaml  .cursorrules  .gitignore  .gitleaks.toml  .gitmodules  .mdformat.toml  .pre-commit-config.yaml  .secrets-nb.baseline  .secrets.baseline  404.html  CLAUDE.md  CODE-REVIEW.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.arm  README.md  SECURITY.md  bionemo-recipes.md  index.html  objects.inv  pyproject.toml  requirements-cve.txt  requirements-dev.txt  requirements-docker.txt  requirements-test.txt  sitemap.xml  tach.toml
.devcontainer/: devcontainer.json  initializeCommand.sh  postCreateCommand.sh
.devcontainer/framework/: devcontainer.json
.devcontainer/recipes/: Dockerfile  README.md  devcontainer.json  initializeCommand.sh  litellm_config.yaml  postCreateCommand.sh  requirements.txt  setup_claude_env.sh  start.sh
.github/: codecov.yml  copy-pr-bot.yaml  dependabot.yml  labels.yml  nv-slack-bot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: approvals.yml  bionemo-subpackage-ci.yml  blossom-ci.yml  build-dashboard.yml  convergence-tests.yml  scdl-performance-tests.yml  sync-labels.yml  trufflehog.yml  unit-tests-framework.yml  unit-tests-mbridge-recipes.yaml  unit-tests-recipes.yml  unit-tests.yml
API_reference/: index.html
LICENSE/: third_party.txt
SUMMARY/: index.html
bionemo-recipes/: README.md
bionemo-recipes/datasets/: README.md  esm2_uniref_pretraining_data.md
bionemo-recipes/models/: README.md
bionemo-recipes/models/esm2/: Dockerfile  README.md  convert.py  export.py  pyproject.toml  state.py
bionemo-recipes/models/esm2/src/esm/: collator.py  convert.py  export.py  modeling_esm_te.py  state.py
bionemo-recipes/models/esm2/tests/: conftest.py  test_collator.py  test_collator_context_parallel.py  test_convert.py  test_cp.py  test_cp_bshd.py  test_cp_dataloader.py  test_cp_thd.py  test_distributed_fp8.py  test_distributed_strategies.py  test_export.py  test_fast_tokenizer.py  test_fp8.py  test_layer_quantization.py  test_meta_device_init.py  test_modeling_esm_te.py  test_peft.py  test_thd.py  test_thd_inputs.py
bionemo-recipes/models/esm2/tests/common/: fixtures.py  test_modeling_common.py
bionemo-recipes/recipes/: .ruff.toml  README.md  context_parallel.md
ci/: Pypi_publish.md  recipes_build_and_test.py  recipes_local_test.py
ci/docker/: Dockerfile.pip_deps  entrypoint.sh  update_docker_pypi_deps.sh
ci/lepton/: README.md  requirements.txt
ci/scripts/: build_docker_image.sh  check_copied_files.py  license_check.py  recipes_local_test.py  run_gitleaks.sh  run_pytest.sh  run_pytest_notebooks.sh  static_checks.sh  utils.sh
datasets/: index.html
datasets/CELLxGENE/: index.html
datasets/uniprot/: index.html
docs/: README.md  mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/overrides/: main.html
docs/scripts/: gen_ref_pages.py
internal/scripts/: README.md
main/: index.html
main/SUMMARY/: index.html
main/datasets/: index.html
main/getting-started/: index.html
main/recipes/: index.html
models/: .ruff.toml  README.md  index.html
models/ESM-2/: index.html
models/amplify/: Dockerfile  export.py  index.html  pyproject.toml
models/amplify/.devcontainer/: devcontainer.json
models/amplify/src/amplify/: amplify_te.py  state_dict_convert.py
models/amplify/tests/: conftest.py  test_amplify_model.py  test_encoder_block.py  test_export.py  test_rotary_embeddings.py
models/esm2/: Dockerfile  export.py  model_readme.md  pyproject.toml
models/esm2/src/esm/: collator.py  export.py  modeling_esm_te.py
models/esm2/tests/: conftest.py  test_distributed_strategies.py  test_export.py  test_modeling_esm_te.py  test_thd_inputs.py
models/evo2/: index.html
models/geneformer/: index.html
patches/: te.patch
recipes/: .ruff.toml  README.md
recipes/amplify_accelerate_te_fp8/: Dockerfile  README.md  dataset.py  requirements.txt  test_train.py  train.parquet  train.py
recipes/esm2_accelerate/: dataset.py  requirements.txt  test_train.py  train.py
recipes/esm2_native_fsdp2/: .dockerignore  .ruff.toml  README.md  dataset.py  modeling_esm.py  requirements.txt  test_train.py  train.py  train_nvfsdp.py
recipes/esm2_native_te_mfsdp/: Dockerfile  requirements.txt  test_train.py  train_ddp.py  train_fsdp2.py  train_mfsdp.py
recipes/esm2_native_te_mfsdp_thd/: test_thd_format.py
recipes/esm2_native_te_nvfsdp/: Dockerfile  README.md  requirements.txt  train.py  train_fsdp2.py
recipes/esm2_native_te_nvfsdp_thd/: Dockerfile  README.md  modeling_esm_te.py  requirements.txt  test_thd_format.py  test_train.py  train.py
recipes/geneformer_native_te_mfsdp_fp8/: train.py  (+2 more)
search/: search_index.json
sub-packages/bionemo-amplify/: README.md  pyproject.toml
sub-packages/bionemo-amplify/src/bionemo/amplify/: convert.py  datamodule.py  dataset.py  hf_rotary.py  infer_amplify.py  model.py  tokenizer.py  train_amplify.py
sub-packages/bionemo-amplify/tests/bionemo/amplify/: test_convert.py  test_dataset.py  test_hf_rotary.py  test_infer_amplify.py  test_model.py  test_train_amplify.py
sub-packages/bionemo-recipeutils/: README.md  pyproject.toml
sub-packages/bionemo-recipeutils/src/bionemo/recipeutils/: __init__.py
sub-packages/bionemo-recipeutils/src/bionemo/recipeutils/data/basecamp/: sharded_dataset.py  utils.py
sub-packages/bionemo-recipeutils/src/bionemo/recipeutils/inference/: collation.py
sub-packages/bionemo-recipeutils/src/bionemo/recipeutils/io/: fasta_to_jsonl.py
sub-packages/bionemo-recipeutils/tests/bionemo/recipeutils/inference/: test_collation.py
sub-packages/bionemo-recipeutils/tests/bionemo/recipeutils/io/: test_fasta_to_jsonl.py
sub-packages/bionemo-scspeedtest/: README.md  pyproject.toml
sub-packages/bionemo-scspeedtest/examples/: comprehensive_benchmarking.py  scdataset_script.py
sub-packages/bionemo-scspeedtest/src/bionemo/scspeedtest/: __init__.py  benchmark.py  common.py
sub-packages/bionemo-scspeedtest/tests/bionemo/scspeedtest/: test_benchmark.py  test_common.py
user-guide/: index.html
(+1180 files in other folders)
