
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-amplify"
readme = "README.md"
description = "A BioNeMo sub-package for training AMPLIFY models."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    # internal
    'bionemo-core',
    'bionemo-llm',
    'bionemo-esm2',
    # external
    'xformers'
]

[project.scripts]
train_amplify = "bionemo.amplify.train_amplify:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.uv]
cache-keys = [{ git = true }]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
