[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-recipeutils"
readme = "README.md"
description = "Shared, framework-agnostic utilities for BioNeMo recipes."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "torch",
    "numpy",
    "polars",
]

[project.optional-dependencies]
basecamp = ["polars"]

[project.scripts]
bionemo_fasta_to_jsonl = "bionemo.recipeutils.io.fasta_to_jsonl:main"
bionemo_precompute_windows = "bionemo.recipeutils.data.basecamp.sharded_dataset:main_precompute"
bionemo_remove_optimizer = "bionemo.recipeutils.checkpoint.remove_optimizer:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.uv]
cache-keys = [{ git = true }]
