[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-scspeedtest"
version = "0.0.1"
description = "Simple benchmarking framework for any single-cell dataloader"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]

dependencies = [
    "torch>=1.12.0",
    "psutil>=5.8.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "tqdm>=4.0.0",
    "scdataset",
    "anndata>=0.11.0",
    "bionemo-scdl>=0.0.7"

]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]
[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]
