[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esm"
version = "0.1.0"
description = "ESM TE Model"
requires-python = ">=3.8"
dependencies = [
    "accelerate",
    "datasets",
    "fiddle",
    "hydra-core",
    "lightning",
    "megatron-core@git+https://github.com/NVIDIA/Megatron-LM.git", # Currently at ToT until mfsdp is in a release.
    "megatron-fsdp==0.1.0rc0",
    "nemo_toolkit[lightning]",                                     # tested with 2.3.1
    "omegaconf",
    "pytest",
    "torch",
    "transformer_engine[pytorch]",
    "transformers<4.56",                                           # TODO: fix me, currently failing with a modelopt import from nemo.
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = ["--color=yes", "--strict-markers", "--tb=short", "-v"]
